--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,9 +72,15 @@ flutter:
         - asset: assets/fonts/Almarai-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+    - family: Everett
+      fonts:
+        - asset: assets/fonts/Everett Regular.ttf
+
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+
+        
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
